feat: CRON jobs - Cache Repository added
